# MyDatabase

./: .version.db  00Database.cpp  00Database.h  01Crud.cpp  01Crud.h  02Query.cpp  02Query.h  03Interpreter.cpp  03Interpreter.h  04Parser.cpp  04Parser.h  05Interface.cpp  05Interface.h  CMakeLists.txt  CRUDEngine.cpp  Compiler.cpp  Connection.cpp  Connection.h  Create.cpp  Create.h  Crud.cpp  Crud.h  Database.cpp  Database.h  Delete.cpp  Delete.h  Dfa.cpp  Dfa.h  Interface.cpp  Interface.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Makefile  Parser.cpp  Parser.h  Query.cpp  Query.h  README.md  (+5 more)
.build/: main.d
.build/.imgui/: imgui.d  imgui_draw.d  imgui_tables.d  imgui_widgets.d
.build/imgui/misc/cpp/: imgui_stdlib.d
.build/src/Crud/: Connection.d  Create.d  Crud.d  Delete.d  Read.d  Update.d
.build/src/Database/: Database.d
.build/src/Error/: Error.d
.build/src/Interface/: Interface.d
.build/src/Interpreter/: Dfa.d  Interpreter.d  Lexer.d  Query.d
.build/src/Misc/: Parser.d
src/: main.cpp
src/Crud/: Connection.h  Create.h  Delete.cpp  Delete.h  Read.cpp  Read.h  Update.h
src/Interface/: Interface.cpp  Interface.h
src/Interpreter/: Dfa.cpp  Dfa.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Query.cpp  Query.h
src/Misc/: Parser.cpp  Parser.h
src/crud/: create.cpp  create.h  delete.cpp  delete.h  read.cpp  read.h  update.cpp  update.h
src/database/: database.cpp  database.h  datatype.cpp  datatype.h  meta.cpp  meta.h  type.cpp  type.h  validator.cpp  validator.h
src/disk_storage/: manager.cpp  manager.h  version_control.cpp  version_control.h
src/error/: error.cpp  error.h
src/file_manager/: manager.cpp  manager.h  observer.cpp  observer.h
src/interface/: interface.cpp  interface.h
src/interpreter/: dfa.cpp  dfa.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  query.cpp  query.h
src/misc/: parser.cpp  parser.h
